--- a/views/group.ejs
+++ b/views/group.ejs
@@ -101,7 +101,9 @@
                         <input type="hidden" value="<%= group[i].section %>" name="groupSection">
                       </form>
                     <% } %>
-                    
+                    <form action="/faculty/archive/view/<%= group[i].id %>" method="GET">
+                      <button type="submit">View</button>
+                    </form>
                     <% if (!hasGroup && role === "Student") { %>
                       <form action="/student/group" method="POST">
                         <button>Join Group</button>
