--- a/public/css/form-submit.css
+++ b/public/css/form-submit.css
@@ -16,6 +16,7 @@
     width: 87%;
     margin-bottom: 1rem;
     display: flex;
+    align-items: center;
 }
 
 .container .card-actions {
@@ -42,7 +43,4 @@
     padding: 5px 5px;
 }
 
-iframe {
-    display: none;
-}
 
