--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,10 +42,14 @@
         <div class="card">
           <h4>Email:</h4>
           <p><%= email %></p>
+          <p><a href="/auth/change-email">Update Email</a></p>
         </div>
         <div class="card">
           <h4>Role:</h4>
           <p><%= role %></p>
+        </div>
+        <div class="card">
+          <p><a href="/auth/change-password">Change Password</a></p>
         </div>
       </div>
       
