--- a/public/css/forgot-password.css
+++ b/public/css/forgot-password.css
@@ -1,8 +1,8 @@
 .container {
     display: flex;
     flex-direction: column;
-    margin-left: 250px;
-    max-width: 25%;
+    max-width: 30%;
+    margin: 0 auto;
   }
   
   .card {
@@ -26,4 +26,8 @@
     font-size: 16px;
     line-height: 1.5;
   }
+
+.card-items {
+    margin-block: 10px;
+}
   
