--- a/public/css/update-account.css
+++ b/public/css/update-account.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 250px;
-    max-width: 25%;
+    max-width: 30%;
   }
   
   .card {
@@ -26,4 +26,8 @@
     font-size: 16px;
     line-height: 1.5;
   }
+
+.card-items {
+    margin-block: 10px;
+}
   
