--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href = "/css/auths.css">
 <head>
-        <title>LoginPage</title>
+        <title>Login Page</title>
 </head>
 <body>
-    <header>
-    <link rel="stylesheet" href = "/css/auths.css">
-        <div class = "header">
-    <img style="float: right; margin: 0px 30px 10px 20px;" src="/img/IICS_Logo.png" width="130" />
-    <img style="float: left; margin: 20px 20px 20px 20px;" src="/img/ust_logo_name.png" width="900" />
-      </header>
-      <div>
-     <center> <h1>Log in</h1></center> 
-      </div>
-      <div class = "grayline">
-        <center>
-        <div class = "box">    
-          <form action="/auth/login" method="POST">
-            <input type = "text" name = "email" placeholder="UST email address" required>
-            <div class = "box1">    
-              <input type = "password" name = "password" placeholder="Password" required>
-              <div>
-                <h5>Dont have account? <a href="/auth/register">Register here</a></h5> <!--link dito -->
-              </div>
-              <div class = "box2">    
-                <button class="button button1" type="submit">Login</button>
-                <div>
-                  <h6>Forgot Password?</h6>   <!--link dito -->
-                </div>
-                <div>
-                  <h6>Click here for the tutorial</h6>  <!--link dito -->
-                </div>
-              </div>
-            </form>
-            </div>
+  <header>
+  <div class="header">
+    <img src="/img/ust_logo_name.png" id="ust-logo"/>
+    <img src="/img/IICS_Logo.png" id="iics-logo"/>
+  </header>
+    <div>
+      <center><h1>Log in</h1></center> 
+    </div>
+    <div class="container center">
+      <div class="grayline"></div>
+      <form action="/auth/login" method="POST">
+        <div class="form-control">
+          <h4>Email Address</h4>
+          <input type="email" name="email" placeholder="Email">
+        </div>
+        <div class="form-control loginPass">
+          <h4>Password</h4>
+          <input type="password" name="password" placeholder="Password">
+        </div>
+        <div class="form-links">
+          <h5>Dont have an account? 
+            <a href="/auth/student-register">Register as student</a> or
+            <a href="/auth/faculty-register">Register as faculty</a>
+          </h5>
+        </div>
+        <div class="form-button">
+          <center><button type="submit">Login</button></center>
+        </div>
+        <div class="form-links">
+          <center><a href="/auth/forgot-password">Forgot Password?</a></center>
+        </div>
+        <div class="form-links">
+          <center><a href="#">Click here for the tutorial</a></center>
+        </div>
+      </form>
+    </div>
+
 </body>
 </html>
