--- a/public/css/group.css
+++ b/public/css/group.css
@@ -5,6 +5,12 @@
   margin-left: 250px;
 }
 
+.header {
+  border-bottom: 2px solid grey;
+  width: 78rem;
+  margin-bottom: 1.5rem;
+}
+
 .top-container {
   display: flex;
   flex-wrap: wrap;
@@ -29,7 +35,6 @@
 }
 
 .filter-card {
-  background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 1rem;
