--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -12,9 +12,11 @@
     <%- include ('partials/navigation.ejs') %>
 
     <div class="container">
+        <div class="header">
+            <h1>Update Password</h1>
+        </div>
         <form action="/auth/change-password" method="POST">
             <div class="card">
-            <h4>Change Password</h4>
                 <div class="card-items">
                     <label for="oldPassword">Current Password</label>
                     <input type="password" name="oldPassword">
