--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,48 +10,57 @@
 </head>
 <body>
     <%- include ('partials/navigation.ejs') %>
-
     <div class="container">
-      <% if(role == "Faculty" && isBatchActive == false) { %>
-        <div class="card">
-          <h4>Create Batch:</h4>
-          <form action="/faculty/home" method="POST">
-            <input type="text" name="name">
-            <button type="submit" name="button" value="start">Start</button>
-          </form>
+      <div class="header">
+        <h1>Profile</h1>
+      </div>
+      <div class="row">
+        <div class="column">
+          <% if(role == "Faculty" && isBatchActive == false) { %>
+            <div class="card">
+              <h4>Create Batch:</h4>
+              <form action="/faculty/home" method="POST">
+                <input type="text" name="name">
+                <button type="submit" name="button" value="start">Start</button>
+              </form>
+            </div>
+          <% } %>
+          <% if(role == "Faculty" && isBatchActive == true) { %>
+            <div class="card">
+              <form action="/faculty/home" method="POST">
+                <h4>Current Batch:</h4>
+                <p><%= batchName %></p>
+                <button type="submit" name="button" value="stop">Stop</button>
+              </form>
+            </div>
+          <% } %>
+          <div class="card">
+            <h4>First Name:</h4>
+            <p><%= firstName %></p>
+          </div>
+          <div class="card">
+            <h4>Last Name:</h4>
+            <p><%= lastName %></p>
+          </div>
         </div>
-      <% } %>
-      
-      <% if(role == "Faculty" && isBatchActive == true) { %>
-        <div class="card">
-          <form action="/faculty/home" method="POST">
-            <h4>Current Batch:</h4>
-            <p><%= batchName %></p>
-            <button type="submit" name="button" value="stop">Stop</button>
-          </form>
-        </div>
-      <% } %>
-        <div class="card">
-          <h4>First Name:</h4>
-          <p><%= firstName %></p>
-        </div>
-        <div class="card">
-          <h4>Last Name:</h4>
-          <p><%= lastName %></p>
-        </div>
-        <div class="card">
-          <h4>Email:</h4>
-          <p><%= email %></p>
-          <p><a href="/auth/change-email">Update Email</a></p>
-        </div>
-        <div class="card">
-          <h4>Role:</h4>
-          <p><%= role %></p>
-        </div>
-        <div class="card">
-          <p><a href="/auth/change-password">Change Password</a></p>
+        <div class="column">
+          <div class="card">
+            <h4>Role:</h4>
+            <p><%= role %></p>
+          </div>
+          <div class="card">
+            <h4>Email:</h4>
+            <p><%= email %></p>
+            <p><a href="/auth/change-email">Update Email</a></p>
+          </div>
+          
+          <div class="card">
+            <p><a href="/auth/change-password">Change Password</a></p>
+          </div>
         </div>
       </div>
+    </div>
+    
       
 </body>
 </html>
