--- a/views/faculty-activities/create-form.ejs
+++ b/views/faculty-activities/create-form.ejs
@@ -30,10 +30,9 @@
           <div class="form-group">
             <label for="section">Section</label>
             <select name="section" id="section">
-              <option value="3ISA">3ISA</option>
-              <option value="3ISB">3ISB</option>
-              <option value="4ISA">4ISA</option>
-              <option value="4ISB">4ISB</option>
+              <option value="isa">IS A</option>
+              <option value="isb">IS B</option>
+              <option value="isc">IS C</option>
             </select>
           </div>
           <button type="submit" class="btn btn-primary">Create</button>
