--- a/views/faculty-activities/roles.ejs
+++ b/views/faculty-activities/roles.ejs
@@ -20,19 +20,21 @@
     <div class="body">
         <div class="roles">
         <h4>Faculty Members with roles:</h4>
-        <% if(facultyMembers.length > 0) { %>
+        <form action="/faculty/activities/remove" method="POST">
+            <% if(facultyMembers.length > 0) { %>
             <% facultyMembers.forEach((member, i) => { %>
-                <% if(userFaculty[i].batchId == activeBatchId) { %>
-                <% if (userFaculty[i].role == 'course-facilitator') { %>
-                    <p><%= userFaculty[i].role + ' ' + userFaculty[i].section %></p>
-                    <% } else { %>
-                        <p><%= userFaculty[i].role %></p>
-                    <% } %>
-                        <p><%= member.firstName + ' ' + member.lastName %></p>
-                        <br>
-                    <% } %>
+                    <% if (userFaculty[i].role == 'course-facilitator') { %>
+                        <p><%= userFaculty[i].role + ' ' + userFaculty[i].section %></p>
+                        <% } else { %>
+                            <p><%= userFaculty[i].role %></p>
+                            <% } %>
+                            <p><%= member.firstName + ' ' + member.lastName %></p>
+                            <button value="<%= userFaculty[i].id %>" name="facultyId" type="submit">Remove</button>
+                            <br>
                 <% }) %>
-        <% } %>
+            <% } %>
+        </form>
+        
     </div>
     <div class="members">
         <h4>All Faculty Members</h4>
@@ -56,8 +58,8 @@
                 <input type="text" name="userId">
                 <label for="section">Section: </label>
                 <select name="section" id="section">
-                  <option value="3isa">3ISA</option>
-                  <option value="3isb">3ISB</option>
+                  <option value="isa">IS A</option>
+                  <option value="isb">IS B</option>
                 </select>
                 <button value="course-facilitator" name="role" type="submit">Assign Role</button>
             </div>
