--- a/public/css/view.css
+++ b/public/css/view.css
@@ -21,6 +21,11 @@ body {
     padding-bottom: 1.5rem;
     width: 78rem;
     border-bottom: 2px solid black;
+    margin-top: 1rem;
+}
+
+a {
+  text-decoration: none;
 }
 
 .container-top .members {
