--- a/views/faculty-activities/create-form.ejs
+++ b/views/faculty-activities/create-form.ejs
@@ -13,8 +13,10 @@
 <body>
   <%- include ('../partials/navigation.ejs') %>
     <div class="container">
+      <div class="header">
+        <h1>Create Submission Forms</h1>
+      </div>
         <form action="/faculty/activities/create-form" method="POST" >
-          <h1>Create Submission Form</h1>
           <div class="form-group">
             <label for="title">Title</label>
             <input type="text" class="form-control" id="title" name="title" required>
@@ -28,14 +30,25 @@
             <input type="datetime-local" class="form-control" id="deadline" name="deadline" required>
           </div>
           <div class="form-group">
-            <label for="section">Section</label>
-            <select name="section" id="section">
-              <option value="isa">IS A</option>
-              <option value="isb">IS B</option>
-              <option value="isc">IS C</option>
-            </select>
           </div>
-          <button type="submit" class="btn btn-primary">Create</button>
+          <button type="submit" value="<%= section %>" name="section" class="btn btn-primary">Create</button>
         </form>
-    </div>
+
+        <div class="form-list">
+          <div class="header-2">
+            <h2>Forms Created</h2>
+          </div>
+          <% if(forms.length > 0) { %>
+            <% forms.forEach(form => { %>
+              <div  class="form-control-2 flex">
+                <form action="/faculty/activities/form-view" method="GET" class="flex s">
+                  <h4><%= form.title %></h4>
+                  <button value="<%= form.id %>" type="submit" name="formId">View</button>
+                </form>
+              </div>
+            <% }) %>
+          <% } %>
+        </div>
+      </div>
+
   </body>
