--- a/views/formView.ejs
+++ b/views/formView.ejs
@@ -15,13 +15,17 @@
     
     <div class="container">
         <div class="top">
-            <a href="/student/activities/submit">Go Back</a>
+            <% if(role == 'Student') { %>
+                <a href="/student/activities/submit">Go Back</a>
+            <% } %>
             <h1><%= form.title %></h1>
             <h3>Deadline: </h3>
             <h5><%= form.deadline.toLocaleDateString() %></h3>
         </div>
         <div class="body">
+            <h4>Description</h4>
             <p><%= form.description %></p>
+            <% if(role == 'Student') { %>
             <form action="/student/activities/submit" method="POST" enctype="multipart/form-data">
                 <div class="form-control">
                     <label for="file">PDF file</label>
@@ -31,6 +35,7 @@
                   </div>
                 <button class="btn" type="submit">Submit</button>
               </form>
+            <% } %>
         </div>
     </div>
 </body>
