--- a/views/faculty-activities/create-form.ejs
+++ b/views/faculty-activities/create-form.ejs
@@ -26,9 +26,13 @@
             <textarea class="form-control" id="description" name="description" rows="4"></textarea>
           </div>
           <div class="form-group">
+            <label for="description">Needs Approval</label>
+            <input type="checkbox" name="needsApproval">
+          </div>
+          <!-- <div class="form-group">
             <label for="deadline">Deadline (Date and Time)</label>
             <input type="datetime-local" class="form-control" id="deadline" name="deadline" required>
-          </div>
+          </div> -->
           <div class="form-group">
           </div>
           <button type="submit" value="<%= section %>" name="section" class="btn btn-primary">Create</button>
